Use v1 for openapi.yaml URL
